chore(app): remove .item border at the bottom, change d3 import/fix(app): fix href when landscape mode to portrait mode, fix wrap problem when in news content

--- a/app/app.sass
+++ b/app/app.sass
@@ -292,6 +292,9 @@ body
   text-align: left
   width: 100%
 
+  &:nth-last-child(2)
+    border: none
+
   [data-orientation='portrait'] &
     transition: opacity .4s,height .4s
   [data-orientation='portrait'] .page-content[data-page-content='list'] &
@@ -302,6 +305,9 @@ body
 
     &:first-child
       margin-top: 1em
+
+    &:nth-last-child(2)
+      border-bottom: 0px
   
   [data-orientation='landscape'] &
     transition: opacity $normal-term 
@@ -312,6 +318,9 @@ body
     margin: 0 2% 2% 2%
     width: 45%
 
+    &:nth-last-child(2)
+      border-bottom: 0px
+
   [data-page-content='list'] &
     border-bottom: lighten(rgb(71, 66, 70), 50%) 2px solid
     opacity: 1
@@ -320,7 +329,8 @@ body
     display: none
 
     [data-page-content='list'] &
-      display: table //discuss
+      display: inline-block 
+      margin-right: .5em
 
   p
     white-space: pre-line
@@ -362,7 +372,7 @@ body
   width: 2em
 
 .item .title
-  display: flex
+  display: inline-block
   line-height: 2
 
   [data-orientation='landscape'] &
@@ -448,6 +458,7 @@ body
     right: 57%
 
 .wrap
+  [data-page-content='list']
   line-height: 1!important
   white-space: initial !important
 
